fix: add wrap in case of very long line for code outputs

--- a/inst/report/package/custom.scss
+++ b/inst/report/package/custom.scss
@@ -137,4 +137,7 @@ pre.details {
     border-radius: 0px;
     padding: 10px 1rem 10px 1rem;
 
+    code {
+        overflow:auto;
+    }
 }
